--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ rocket = {version = "0.5.0-rc.1", features = ["json", "uuid"] }
 rust-argon2 = "0.8.3"
 serde = "1.0.130"
 redis = "0.21.2"
+log4rs = "1.0.0"
+log = "0.4.14"
 
 [dev-dependencies]
 lazy_static = "1.4.0"
