--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,9 +1,10 @@
 [default]
-address = "0.0.0.0"
+address = "127.0.0.1"
+port = 9000
 
-[default.tls]
-certs = "tsl/txvps-moeif-com-1006224627_chain.crt"
-key = "tsl/txvps-moeif-com-1006224627_key.key"
+#[default.tls]
+# certs = "tsl/txvps-moeif-com-1006224627_chain.crt"
+# key = "tsl/txvps-moeif-com-1006224627_key.key"
 
 # [default.tls.mutual]
 # ca_certs = "tsl/ca_cert.pem"
